| Summary: | ASTERISK-27553: [patch] res_curl: Avoid error message on unload. | ||
| Reporter: | Alexander Traud (traud) | Labels: | patch |
| Date Opened: | 2018-01-05 07:34:18.000-0600 | Date Closed: | 2018-01-07 16:44:37.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | PBX/pbx_lua Resources/General |
| Versions: | 13.18.5 15.1.5 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) module_silence.patch | |
| Description: | After running the script {{./contrib/scripts/install_prereq}} to install Asterisk, near to all modules compile at default. Some of those modules emit unnormal and unneeded status messages. _res_curl_ even emits an error message when Asterisk is stopped gracefully:{code}NOTICE: res_odbc.c:1021 int load_module(void): res_odbc loaded.
NOTICE: pbx_lua.c:1652 int load_or_reload_lua_stuff(void): Lua PBX Switch loaded. ... ERROR: res_curl.c:63 int unload_module(void): res_http_media_cache.so (dependent module) is still loaded. Cannot unload res_curl.so NOTICE: pbx_lua.c:1663 int unload_module(void): Lua PBX Switch unloaded.{code}That prerequisite script is mainly for Asterisk starters. For those users no confusing messages should be printed on the command-line interface (CLI). Furthermore since ASTERISK-27475, _res_curl_ is built on default when the user wants the audio codec Opus-Codec from Digium. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2018-01-07 16:44:38.684-0600 Change 7830 merged by Jenkins2: General: Silence modules on (un)load. [https://gerrit.asterisk.org/7830|https://gerrit.asterisk.org/7830] By: Friendly Automation (friendly-automation) 2018-01-07 16:47:12.074-0600 Change 7829 merged by Jenkins2: General: Silence modules on (un)load. [https://gerrit.asterisk.org/7829|https://gerrit.asterisk.org/7829] By: Friendly Automation (friendly-automation) 2018-01-07 16:47:59.904-0600 Change 7828 merged by Jenkins2: General: Silence modules on (un)load. [https://gerrit.asterisk.org/7828|https://gerrit.asterisk.org/7828] | ||