pbx/pbx_lua.c
@@ -1648,9 +1648,6 @@ static int load_or_reload_lua_stuff(void)
 		}
 	}
 
-	if (!res) {
-		ast_log(LOG_NOTICE, "Lua PBX Switch loaded.\n");
-	}
 	lua_close(L);
 	return res;
 }
@@ -1660,7 +1657,6 @@ static int unload_module(void)
 	ast_context_destroy(NULL, registrar);
 	ast_unregister_switch(&lua_switch);
 	lua_free_extensions();
-	ast_log(LOG_NOTICE, "Lua PBX Switch unloaded.\n");
 	return 0;
 }
 
